--- a/styles/style.css
+++ b/styles/style.css
@@ -119,7 +119,7 @@ hr {
 
 main {
     /* background-color: #282D35 !important; */
-    background-image: linear-gradient(rgba(0, 0, 0,0.6),rgba(0, 0, 0,0.6)),
+    background-image: linear-gradient(rgba(0, 0, 0,0.4),rgba(0, 0, 0,0.4)),
                         url('../assets/backgroundImage.jpg');
     background-repeat: no-repeat;
     background-size: cover;
@@ -288,14 +288,13 @@ footer .fa-brands {
     }
 
 
-    .home {
-        height: 15rem;
-        padding-top: 0rem;
-        display: flex;
+     .home {
+
+        /* display: flex;
         flex-direction: column;
         /* align-items: center;
         justify-content: center; */
-        text-align: center;
+        /* text-align: center;  */
     }
 
     /* .introduction {
