--- a/styles/style.css
+++ b/styles/style.css
@@ -278,7 +278,10 @@ footer .fa-brands {
     .section {
         margin-top: 4rem;
     }
-
+    
+    .logo h1{
+        font-size: 2.5rem;
+    }
     .hamburger {
         display: unset;
     }
@@ -289,7 +292,7 @@ footer .fa-brands {
 
 
      .home {
-
+        height: 75vh;
         /* display: flex;
         flex-direction: column;
         /* align-items: center;
