--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -1,10 +1,12 @@
+@import 'variables';
+@import 'mixins' ;
+
 * {
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
-    color: #FCFCFC;
+    color: $primary-font-color;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    /* background-color: #21222A; */
 }
 
 html {
@@ -16,18 +18,14 @@ li {
     list-style: none;
 }
 
-.heading{
-    font-size: 3.5rem;
-    color: #66FCF1;
-    text-align: center;
-}
+
 
 
 
 .subheading{
     padding-top: 3rem;
     font-size: 2.5rem;
-    color: #fcfcfc;
+    color: $primary-font-color;
    
 }
 
@@ -37,12 +35,12 @@ li {
 
 header {
     /* padding: 0 32px; */
-    background-color: #21222A;
+    background-color: $primary-background-color;
 }
 
 .navBar { 
-    display: flex;
-    flex-direction: row;
+   
+    @include flex-set(row);
     justify-content: space-between;
     align-items: center;
     /* flex-wrap: wrap; */
@@ -50,20 +48,18 @@ header {
 }
 
 .logo {
-    /* width: 8rem;
-    height: 8rem; */
-    font-size: 2rem;
-text-align: center;
-padding: 2rem;
+   font-size: 2rem;
+    text-align: center;
+    padding: 2rem;
 }
 
 .logo h1{
-    color: #66FCF1;
+    color: $secondary-font-color;
 
 }
 
 .logo h1:hover{
-    color: #fcfcfc;
+    color: $primary-font-color;
     cursor: pointer;
 
 }
@@ -77,9 +73,7 @@ padding: 2rem;
 }
 
 .hamburger {
-    /* width: 5rem;
-    height: 5rem;
-    border: 0.1rem solid red; */
+    
     margin-right: 2rem;
     cursor: pointer;
     display: none;
@@ -94,12 +88,9 @@ padding: 2rem;
 }
 
 .navLinks {
-    display: flex;
-    flex-direction: row;
+    @include flex-set(row,1.5rem);
     width: 100%;
     justify-content: space-between;
-    /* flex-wrap: wrap; */
-    gap: 1.5rem;
     font-size: 2rem;
 }
 
@@ -110,7 +101,7 @@ padding: 2rem;
 
 .navItem {
     list-style: none;
-    color: #66FCF1;
+    color: $secondary-font-color;
 }
 
 .navItem:hover{
@@ -121,32 +112,30 @@ padding: 2rem;
 }
 
 .navLink:hover {
-    color: #66FCF1;
+    color: $secondary-font-color;
 }
 
 .cta {
     padding: 1rem 2rem;
-    /* border: 2px solid red; */
     border-radius: 0.7rem;
-    color: #21222A;
-    /* color: #FCFCFC; */
-    background-color: #66FCF1;
+    color: $primary-background-color;
+    background-color: $secondary-font-color;
 }
 
 .cta:hover {
-    background-color: black;
+    background-color: $primary-background-color;
 }
 
 hr {
-    /* background-color: #0a0b0b; */
-    border: 0.1rem solid #66FCF1;
+   
+    border: 0.1rem solid $secondary-font-color;
 }
 
 
 main {
     /* background-color: #282D35 !important; */
     background-image: linear-gradient(rgba(0, 0, 0,0.4),rgba(0, 0, 0,0.4)),
-                        url('../assets/backgroundImage.jpg');
+                        url('../../../assets/backgroundImage.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     padding: 5rem 10rem;
@@ -155,23 +144,19 @@ main {
 
 .home {
     min-height: 73vh;
-    display: flex;
-    flex-direction: row;
+    @include flex-set(row,3rem);
     align-items: center;
-    gap:3rem;
     justify-content: space-between;
 }
 
 .introduction {
-    display: flex;
-    flex-direction: column;
+    @include flex-set(column);
     justify-content: center;
     flex:1.15;
-    /* flex-wrap: wrap; */
 }
 
 .intro_heading {
-    color: #fcfcfc;
+    color: $primary-font-color;
     font-size: clamp(2rem, 5vw, 6rem);
     /* font-size: 6rem; */
     font-weight: 200;
@@ -182,31 +167,26 @@ main {
 }
 
 .name {
-    color: #66FCF1;
+    color: $secondary-font-color;
     font-weight: bold;
 }
 
-.intro_heading {
-    /* margin-top: 2rem; */
-}
 
 .hide{
     display: none;
 }
 .profession {
     font-size: 2.5rem;
-    color: #c5c6c7;
+    color: $optional-font-color;
     font-weight: 200;
 }
 
 .company--name {
-    color: #66FCF1;
+    color: $secondary-font-color;
     font-weight: bold;
 }
 
 .profile_picture {
-    /* width: 50rem;
-    height: 50rem; */
     flex:1;
     display: grid;
     place-content: center;
@@ -220,72 +200,63 @@ main {
 /* PROJECT SECTION */
 .section_name{
     font-size: 4rem;
-    color: #66FCF1;
+    color: $secondary-font-color;
     text-align: center;
     margin-block-end: 8rem;
 }
 
 .project_list{
-    display: flex;
-    flex-direction: column;
-    gap:5rem
+    @include flex-set(column,5rem)
+    
 }
 
 
 
 .project_item{
+    @include flex-set(column,3rem);
     /* min-height: 45rem; */
-    display: flex;
-    flex-direction: column;
-    gap: 3rem;
 }
 
 .project_item:nth-child(even) .project_description{
     flex-direction: row-reverse;
 }
-/* .project_list:first-child{
-    margin-top: 10rem;
-} */
+
 
 
 .project_info,
 .technology,
 .link_button{
-    font-size: 1.65rem
+    font-size: 1.8rem;
+    line-height: 1.4;
+    letter-spacing: 0.1rem;
 }
 
 .project_title{
    
        text-align: center;
         font-size: 2.5rem;
-        color: #66FCF1;
+        color: $secondary-font-color;
     }
 
 .project_description{
-    display: flex;
-    flex-direction: row;
-    /* justify-content: space-between; */
+    @include flex-set(row,3rem);
+   
     align-items: center;
-    gap: 3rem;
-    /* min-height: 40rem;
-    max-height: 60rem; */
 }
 
 .project_content{
-    display: flex;
-    flex-direction: column;
+    @include flex-set(column,1.5rem);
     align-items: flex-start;
     flex: 1;
-    gap:1.5rem
+  
 }
 .project_info{
-    
-    color: #fcfcfc;
+    color: $primary-font-color;
 }
 
 .technology{
     
-    color: #66FCF1;
+    color: $secondary-font-color;
 }
 
 .link_button{
@@ -293,26 +264,26 @@ main {
     text-decoration: none;
     padding: 1rem 1.5rem;
     border-radius: 0.7rem;
-    color: #21222A;
+    color: $primary-background-color;
     /* font-weight: 300; */
     /* color: #FCFCFC; */
-    background-color: #66FCF1;
+    background-color: $secondary-font-color;
     /* padding: 2rem; */
 
 }
 
 .link_button:hover{
-    color: #66FCF1;
-    background-color: #21222A;
+    color: $secondary-font-color;
+    background-color: $primary-background-color;
 
 }
 .link_button:hover .fa-link{
-    color: #66FCF1;
+    color: $secondary-font-color;
 }
 
 .fa-link{
     padding-right: 1rem;
-    color: #21222A;
+    color: $primary-background-color;
 }
 .project_image{
     flex: 1;
@@ -325,64 +296,60 @@ main {
 /* ABOUT SECTION */
 
 .about {
-    display: flex;
-    flex-direction: row;
+    @include flex-set(row);
     justify-content: center;
     text-align: center;
+   
 }
 
-.about_picture {}
+
 
 .about_heading {
-    font-size: 3.5rem;
-    color: #66FCF1;
-    text-align: center;
+    @include heading;
 }
 
 .about_content {
-    padding-top: 3rem;
-    font-size: 2.5rem;
-    color: #fcfcfc;
-    max-width: 70ch;
-    margin-inline: auto;
+    font-size: 2rem;
+    @include flex-set(column,1rem);
+    padding-top: 3rem; 
 }
 
+.content{
+    @include content(2rem,1.5);
+}
 .contact {
     text-align: center;
     margin-block-end: 5rem;
 }
 
 .contact_heading {
-    font-size: 3.5rem;
-    color: #66FCF1;
+    @include heading
 }
 
 .contact_subheading {
-    font-size: 2.5rem;
+    @include subheading
 }
 
 .contact_subheading span {
-    color: #66FCF1;
+    color: $secondary-font-color;
 }
 
 .socialmedia_icons {
-    display: flex;
-    flex-direction: row;
-    gap: 1.5rem;
+    @include flex-set(row,1.5rem);
     justify-content: center;
 }
 
 .socialmedia_icon {
-    color: #66FCF1;
+    color: $secondary-font-color;
 }
 
 .fa-brands{
-    color: #fcfcfc;
+    color: $primary-font-color;
     font-size: 4rem;
 }
 
 .fa-brands:hover{
-    color: #66FCF1;
+    color: $secondary-font-color;
     transform: scale(1.1);
 }
 
@@ -396,10 +363,8 @@ footer .fa-brands {
 }
 
 .footer {
-    background-color: #21222A;
-    display: flex;
-    flex-direction: row;
-    /* flex-wrap: wrap; */
+    background-color: $primary-background-color;
+    @include flex-set(row);
     justify-content: space-around;
     padding: 2.5rem;
 }
@@ -464,10 +429,14 @@ footer .fa-brands {
         font-size: 2.5rem;
     }
     .about_content{
+        gap: 0.8rem;
         padding-top: 1rem;
         font-size: 1.8rem;
     }
     
+    .content{
+        @include content(1.8rem,1.4);
+    }
     /* Project Section */
 
     .section_name{
@@ -476,11 +445,7 @@ footer .fa-brands {
     .project_item:nth-child(even) .project_description{
         flex-direction: column-reverse;
     }
-    .project_description{
-        flex-direction: column-reverse;
-        gap: 2rem;
-        /* margin-block-start: 2rem; */
-    }
+   
 
     .project_item{
         gap: 2rem;
@@ -491,20 +456,19 @@ footer .fa-brands {
     .project_info,
     .technology,
     .link_button{
-        font-size: 1.8rem;
+    font-size: 1.6rem;
+    line-height: 1.3;
+    letter-spacing: 0.1rem;
     }
-    .technology{
-        color: #66FCF1;
-    }
+   
     .contact_heading{
         font-size: 2.5rem;
 
     }
 
     .footer{
-        gap: 1rem;
+        @include flex-set(column,1rem);
         padding: 1.5rem;
-        flex-direction: column;
         text-align: center;
     }
     .iconimage{
@@ -518,10 +482,7 @@ footer .fa-brands {
     .fa-brands{
         font-size: 3rem;
     }
-    
-    .social_media{
-    /* padding-top: 1rem;     */
-    }
+
 
 }
 
@@ -541,12 +502,9 @@ footer .fa-brands {
         flex-direction: column-reverse;
     }
     .project_description{
-        flex-direction: column-reverse;
-        gap: 2rem;
-        /* margin-block-start: 2rem; */
+        @include flex-set(column-reverse,2rem);
     }
     .project_item{
-
         max-width: 60rem;
     }
 }
