--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -68,9 +68,6 @@ header {
     width: 100%;
 }
 
-.navLinkContainer {
-    /* width: 45%; */
-}
 
 .hamburger {
     
@@ -81,7 +78,7 @@ header {
 
 .bar{
     display: block;
-    width: 2.5rem;
+    width: 3rem;
     height: 0.3rem;
     margin: 0.5rem auto;
     background-color: #FCFCFC;
@@ -390,17 +387,55 @@ footer .fa-brands {
         margin-top: 4rem;
     }
     
+    .mobile_nav{
+        @include flex-set(row);
+        align-items: center;
+        height: 10vh;
+        justify-content: space-between;
+        width: 100%;
+    }
     .logo h1{
         font-size: 2.5rem;
     }
     .hamburger {
         display: block;
+        margin-left: auto;
+        top: 0;
     }
+    // .navBar{
+    //     height: 9vh;
+    // }
+   .navLinks{
+    display: none;
+   }
 
-    .navLinkContainer {
+    .logo.click{
         display: none;
     }
-
+    .navBar.click{
+       flex-direction: column;
+        justify-content: center;
+       align-items: center;
+    }
+    
+    // .navLinkContainer{
+    //    align-items: center;
+    //    justify-content: center;
+    //     height: 100vh;
+    //     width: 100%;
+    // }
+    .navLinks.click{
+        @include flex-set(column,2rem);
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        width: 100%;
+    }
+  
+      
+    .cta.click{
+        margin-right: 0rem;
+    }
 
      .home {
         height: 80vh;
