--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -1,5 +1,5 @@
 @import 'variables';
-@import 'mixins' ;
+@import 'mixins';
 
 * {
     margin: 0px;
@@ -22,11 +22,11 @@ li {
 
 
 
-.subheading{
+.subheading {
     padding-top: 3rem;
     font-size: 2.5rem;
     color: $primary-font-color;
-   
+
 }
 
 .section {
@@ -38,8 +38,8 @@ header {
     background-color: $primary-background-color;
 }
 
-.navBar { 
-   
+.navBar {
+
     @include flex-set(row);
     justify-content: space-between;
     align-items: center;
@@ -48,17 +48,17 @@ header {
 }
 
 .logo {
-   font-size: 2rem;
+    font-size: 2rem;
     text-align: center;
     padding: 2rem;
 }
 
-.logo h1{
+.logo h1 {
     color: $secondary-font-color;
 
 }
 
-.logo h1:hover{
+.logo h1:hover {
     color: $primary-font-color;
     cursor: pointer;
 
@@ -70,13 +70,13 @@ header {
 
 
 .hamburger {
-    
+
     margin-right: 2rem;
     cursor: pointer;
     display: none;
 }
 
-.bar{
+.bar {
     display: block;
     width: 3rem;
     height: 0.3rem;
@@ -85,7 +85,7 @@ header {
 }
 
 .navLinks {
-    @include flex-set(row,1.5rem);
+    @include flex-set(row, 1.5rem);
     width: 100%;
     justify-content: space-between;
     font-size: 2rem;
@@ -101,9 +101,10 @@ header {
     color: $secondary-font-color;
 }
 
-.navItem:hover{
+.navItem:hover {
     transform: scale(1.1);
 }
+
 .navLink {
     text-decoration: none;
 }
@@ -124,15 +125,15 @@ header {
 }
 
 hr {
-   
+
     border: 0.1rem solid $secondary-font-color;
 }
 
 
 main {
     /* background-color: #282D35 !important; */
-    background-image: linear-gradient(rgba(0, 0, 0,0.4),rgba(0, 0, 0,0.4)),
-                        url('../../../assets/backgroundImage.jpg');
+    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+        url('../../../assets/backgroundImage.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     padding: 5rem 10rem;
@@ -141,7 +142,7 @@ main {
 
 .home {
     min-height: 73vh;
-    @include flex-set(row,3rem);
+    @include flex-set(row, 3rem);
     align-items: center;
     justify-content: space-between;
 }
@@ -149,7 +150,7 @@ main {
 .introduction {
     @include flex-set(column);
     justify-content: center;
-    flex:1.15;
+    flex: 1.15;
 }
 
 .intro_heading {
@@ -169,9 +170,10 @@ main {
 }
 
 
-.hide{
+.hide {
     display: none;
 }
+
 .profession {
     font-size: 2.5rem;
     color: $optional-font-color;
@@ -184,7 +186,7 @@ main {
 }
 
 .profile_picture {
-    flex:1;
+    flex: 1;
     display: grid;
     place-content: center;
 }
@@ -195,26 +197,25 @@ main {
 
 
 /* PROJECT SECTION */
-.section_name{
+.section_name {
     font-size: 4rem;
     color: $secondary-font-color;
     text-align: center;
     margin-block-end: 8rem;
 }
 
-.project_list{
-    @include flex-set(column,5rem)
-    
+.project_list {
+    @include flex-set(column, 5rem)
 }
 
 
 
-.project_item{
-    @include flex-set(column,3rem);
+.project_item {
+    @include flex-set(column, 3rem);
     /* min-height: 45rem; */
 }
 
-.project_item:nth-child(even) .project_description{
+.project_item:nth-child(even) .project_description {
     flex-direction: row-reverse;
 }
 
@@ -222,21 +223,21 @@ main {
 
 
 
-.project_title{
-   
-       text-align: center;
-        font-size: 2.5rem;
-        color: $secondary-font-color;
-    }
+.project_title {
 
-.project_description{
-    @include flex-set(row,3rem);
-   
+    text-align: center;
+    font-size: 2.5rem;
+    color: $secondary-font-color;
+}
+
+.project_description {
+    @include flex-set(row, 3rem);
+
     align-items: center;
 }
 
-.project_content{
-    @include flex-set(column,1.5rem);
+.project_content {
+    @include flex-set(column, 1.5rem);
     flex: 1;
     align-items: center;
     text-align: center;
@@ -244,24 +245,24 @@ main {
 
 .project_info,
 .technology,
-.link_button{
-   
+.link_button {
+
     font-size: 1.8rem;
     line-height: 1.4;
     letter-spacing: 0.1rem;
 }
 
-.project_info{
+.project_info {
     color: $primary-font-color;
 }
 
-.technology{
-    
+.technology {
+
     color: $secondary-font-color;
 }
 
-.link_button{
-    
+.link_button {
+
     text-decoration: none;
     padding: 1rem 1.5rem;
     border-radius: 0.7rem;
@@ -273,34 +274,38 @@ main {
 
 }
 
-.link_button:hover{
+.link_button:hover {
     color: $secondary-font-color;
     background-color: $primary-background-color;
 
 }
-.link_button:hover .fa-link{
+
+.link_button:hover .fa-link {
     color: $secondary-font-color;
 }
 
-.fa-link{
+.fa-link {
     padding-right: 1rem;
     color: $primary-background-color;
 }
-.project_image{
+
+.project_image {
     flex: 1;
     object-fit: cover;
 }
-.project_img{
+
+.project_img {
     max-width: 100%;
     margin-left: auto;
 }
+
 /* ABOUT SECTION */
 
 .about {
     @include flex-set(row);
     justify-content: center;
     text-align: center;
-   
+
 }
 
 
@@ -311,13 +316,14 @@ main {
 
 .about_content {
     font-size: 2rem;
-    @include flex-set(column,1rem);
-    padding-top: 3rem; 
+    @include flex-set(column, 1rem);
+    padding-top: 3rem;
 }
 
-.content{
-    @include content(2rem,1.5);
+.content {
+    @include content(2rem, 1.5);
 }
+
 .contact {
     text-align: center;
     margin-block-end: 5rem;
@@ -336,7 +342,7 @@ main {
 }
 
 .socialmedia_icons {
-    @include flex-set(row,1.5rem);
+    @include flex-set(row, 1.5rem);
     justify-content: center;
 }
 
@@ -344,12 +350,12 @@ main {
     color: $secondary-font-color;
 }
 
-.fa-brands{
+.fa-brands {
     color: $primary-font-color;
     font-size: 4rem;
 }
 
-.fa-brands:hover{
+.fa-brands:hover {
     color: $secondary-font-color;
     transform: scale(1.1);
 }
@@ -386,58 +392,73 @@ footer .fa-brands {
     .section {
         margin-top: 4rem;
     }
-    
-    .mobile_nav{
+
+    .mobile_nav {
         @include flex-set(row);
         align-items: center;
         height: 10vh;
         justify-content: space-between;
         width: 100%;
     }
-    .logo h1{
+
+    .logo h1 {
         font-size: 2.5rem;
     }
+
+    .navLinks :last-child {
+        margin-right: 0rem;
+    }
+
     .hamburger {
         display: block;
         margin-left: auto;
         top: 0;
     }
+
     // .navBar{
     //     height: 9vh;
     // }
-   .navLinks{
-    display: none;
-   }
-
-    .logo.click{
+    .navLinks {
         display: none;
     }
-    .navBar.click{
-       flex-direction: column;
-        justify-content: center;
-       align-items: center;
+
+    .logo.click {
+        display: none;
     }
-    
+
+    .navBar.click {
+        flex-direction: column;
+        // justify-content: center;
+        // align-items: center;
+    }
+
     // .navLinkContainer{
     //    align-items: center;
     //    justify-content: center;
     //     height: 100vh;
     //     width: 100%;
     // }
-    .navLinks.click{
-        @include flex-set(column,2rem);
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        width: 100%;
+    .bar2.click {
+
+        opacity: 0;
     }
-  
-      
-    .cta.click{
-        margin-right: 0rem;
+    .bar1.click {
+        transform: translateY(0.8rem) rotate(45deg);
+    }
+    .bar3.click {
+        transform: translateY(-0.8rem) rotate(-45deg);
     }
 
-     .home {
+    .navLinks.click {
+        @include flex-set(column, 2rem);
+        justify-content: center;
+        align-items: center;
+        height: 90vh;
+        width: 100%;
+        padding-bottom: 10vh;
+    }
+
+    .home {
         height: 80vh;
         /* display: flex;
         flex-direction: column;
@@ -448,110 +469,124 @@ footer .fa-brands {
 
     .introduction {
         gap: 1rem;
-    } 
+    }
 
-    .intro_heading{
+    .intro_heading {
         font-size: 3.4rem;
     }
 
     .handwave--image {
         height: 3.5rem;
     }
-    .profession{
+
+    .profession {
         font-size: 2rem;
     }
+
     .profile_picture {
         display: none
     }
 
-    .about_heading{
+    .about_heading {
         font-size: 2.5rem;
     }
-    .about_content{
+
+    .about_content {
         gap: 0.8rem;
         padding-top: 1rem;
         font-size: 1.8rem;
     }
-    
-    .content{
-        @include content(1.8rem,1.4);
+
+    .content {
+        @include content(1.8rem, 1.4);
     }
+
     /* Project Section */
 
-    .section_name{
+    .section_name {
         font-size: 3rem;
     }
-    .project_item:nth-child(even) .project_description{
+
+    .project_item:nth-child(even) .project_description {
         flex-direction: column-reverse;
     }
-   
 
-    .project_item{
+
+    .project_item {
         gap: 2rem;
     }
-    .project_content{
-       text-align: center;
-       align-items: center;
+
+    .project_content {
+        text-align: center;
+        align-items: center;
     }
+
     .project_info,
     .technology,
-    .link_button{
-    text-align: center;
-    align-items: center;
-    font-size: 1.6rem;
-    line-height: 1.3;
-    letter-spacing: 0.1rem;
+    .link_button {
+        text-align: center;
+        align-items: center;
+        font-size: 1.6rem;
+        line-height: 1.3;
+        letter-spacing: 0.1rem;
     }
-   
-    .contact_heading{
+
+    .contact_heading {
         font-size: 2.5rem;
 
     }
 
-    .footer{
-        @include flex-set(column,1rem);
+    .footer {
+        @include flex-set(column, 1rem);
         padding: 1.5rem;
         text-align: center;
     }
-    .iconimage{
-        width:3rem
+
+    .iconimage {
+        width: 3rem
     }
-    .contact_subheading{
+
+    .contact_subheading {
         /* padding-top: 1rem; */
         font-size: 1.8rem;
     }
 
-    .fa-brands{
+    .fa-brands {
         font-size: 3rem;
     }
 
 
 }
 
-@media (max-width: 1050px){
-    
-    .addBreak{
+@media (max-width: 1050px) {
+
+    .addBreak {
         display: inline;
     }
 
-    .project_content{
+    .project_content {
         text-align: center;
         align-items: center;
     }
-    .profile_picture{
+
+    .profile_picture {
         object-fit: contain;
     }
-    .project_list{
+
+    .project_list {
         text-align: center;
         align-items: center;
     }
-    .project_item:nth-child(even) .project_description{
+
+    .project_item:nth-child(even) .project_description {
         flex-direction: column-reverse;
     }
-    .project_description{
-        @include flex-set(column-reverse,2rem);
+
+    .project_description {
+        @include flex-set(column-reverse, 2rem);
     }
-    .project_item{
+
+    .project_item {
         text-align: center;
         max-width: 60rem;
     }
