--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -133,7 +133,7 @@ hr {
 main {
     /* background-color: #282D35 !important; */
     background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
-        url('../../../assets/backgroundImage.jpg');
+        url('../../../assets/backgroundImage.webp');
     background-repeat: no-repeat;
     background-size: cover;
     padding: 5rem 10rem;
